--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 sheet_id = '1GyotDnf0dYb0kDIiokScqC7HkFSkoGB13NmPQSOqSCk'
+floorsheet_url = "https://sharehubnepal.com/live/api/v2/floorsheet"
+price_history_url = "https://sharehubnepal.com/data/api/v1/price-history"
